--- a/_sub_menu_topbar.twig
+++ b/_sub_menu_topbar.twig
@@ -10,15 +10,15 @@
       <ul class="left">
         {% for item in menu %}
         {% if item.submenu is defined %}
-          <li class="has-dropdown"><a href="{{ item.path is defined ? item.path : item.link }}">{{ item.label }}</a>
+          <li class="has-dropdown"><a href="{{ item.link }}">{{ item.label }}</a>
             <ul class="dropdown">
               {% for item in item.submenu %}
-              <li><a href="{{ item.path is defined ? item.path : item.link }}">{{ item.label }}</a></li>
+              <li><a href="{{ item.link }}">{{ item.label }}</a></li>
               {% endfor %}
             </ul>
           </li>
         {% else %}
-          <li><a href="{{ item.path is defined ? item.path : item.link }}">{{ item.label }}</a></li>
+          <li><a href="{{ item.link }}">{{ item.label }}</a></li>
         {% endif %}
         {% endfor %}
       </ul>
