Added videoResponsive.css to display responsive video

--- a/_header.twig
+++ b/_header.twig
@@ -10,6 +10,7 @@
     </title>
     <link rel="stylesheet" href="{{ paths.theme }}stylesheets/app.css">
     <link rel="stylesheet" href="{{ paths.theme }}stylesheets/override.css">
+    <link rel="stylesheet" href="{{ paths.theme }}stylesheets/videoResponsive.css">
     {% if 'rssfeed' %}<link rel="alternate" type="application/rss" href="/rss/feed.rss" />{% endif %}
     <script src="{{ paths.theme }}javascripts/jquery.min.js"></script>
   </head>
