--- a/stylesheets/override.css
+++ b/stylesheets/override.css
@@ -5,3 +5,24 @@ body {
 .wrapper {
   background: scale-color(rgba(94,38,5,0.4));
 }
+
+/**
+ * Styles for 'responsive video embeds'
+ */
+.responsive-video {
+  height: 0; padding-top: 25px; padding-bottom: 67.5%; margin-bottom: 10px; position: relative; overflow: hidden;
+}
+.responsive-video.vimeo {
+  padding-top: 0;
+}
+.responsive-video.widescreen {
+  padding-bottom: 57.25%;
+}
+.responsive-video embed, .responsive-video iframe, .responsive-video object, .responsive-video video {
+  top: 0; left: 0; width: 100%; height: 100%; position: absolute;
+}
+@media (max-width: 767px) {
+  .responsive-video {
+    padding-top: 0;
+  }
+}
