--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Raleway:100,300);
+@import url(https://fonts.googleapis.com/css?family=Raleway:100,300);
 @import "settings";
 @import "foundation";
 @import "icons";
