add widget to footer

--- a/_footer.twig
+++ b/_footer.twig
@@ -1,5 +1,8 @@
               <div class="row">
                 <div class="small-12 medium-10 columns">
+
+                  {{ widgets('footer') }}
+
                   <div class="row spacer12"></div>
                   <h6 class="subheader">This site was made with <a href="http://bolt.cm">Bolt</a></h6>
                 </div>
